--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="center">
+        <label class="mobile-nav-btn" for="navCb">|||</label>
+        <input type="checkbox" checked id="navCb">
+        <div class="columns">
+            <nav>
+                <a href="" class="active"><span>Home</span></a>
+                <a href=""><span>About us</span></a>
+                <a href=""><span>Services</span></a>
+                <a href=""><span>Classes</span></a>
+                <a href=""><span>Blog</span></a>
+            </nav>
+            <a href="" class="btn">Join Now</a>
+        </div>
+    </header>
     <script src="script.js"></script>
 </body>
 </html>
