--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style..css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style..css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="center">
-        <label class="mobile-nav-btn" for="navCb">|||</label>
-        <input type="checkbox" checked id="navCb">
-        <div class="columns">
-            <nav>
-                <a href="" class="active"><span>Home</span></a>
-                <a href=""><span>About us</span></a>
-                <a href=""><span>Services</span></a>
-                <a href=""><span>Classes</span></a>
-                <a href=""><span>Blog</span></a>
-            </nav>
-            <a href="" class="btn">Join Now</a>
-        </div>
+      <label class="mobile-nav-btn" for="navCb">|||</label>
+      <input type="checkbox" checked id="navCb" />
+      <div class="columns">
+        <nav>
+          <a href="" class="active"><span>Home</span></a>
+          <a href=""><span>About us</span></a>
+          <a href=""><span>Services</span></a>
+          <a href=""><span>Classes</span></a>
+          <a href=""><span>Blog</span></a>
+        </nav>
+        <a href="" class="btn">Join Now</a>
+      </div>
     </header>
+    <section class="intro center">
+      <div class="content-column">
+        <div class="shadow-text">Grow<br />your<br />strength</div>
+        <div class="content">
+          <h1>Don't stop till<br />you success!</h1>
+          <h2>Get fit, get happy</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            libero nulla obcaecati quam saepe sint, tempore voluptatum
+          </p>
+          <a href="" class="btn">Explore More</a>
+        </div>
+      </div>
+      <div class="intro-picture">
+        <div class="circle"></div>
+        <div class="dots"></div>
+        <img src="woman.png" alt="fit woman" />
+      </div>
+    </section>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
