--- a/index.html
+++ b/index.html
@@ -150,6 +150,51 @@
       </div>
     </section>
 
+    <section class="classes">
+      <div class="center">
+        <h2>What do you want to join today?</h2>
+        <div class="shadow-text">Popular Classes</div>
+        <div class="classes-grid">
+          <a href="https://google.com" class="class">
+            <h3>Cardio Strength</h3>
+            <time>Monday 10:00AM, 22th March</time>
+          </a>
+          <a href="https://google.com" class="class">
+            <h3>Cardio Strength</h3>
+            <time>Monday 10:00AM, 22th March</time>
+          </a>
+          <a href="https://google.com" class="class">
+            <h3>Cardio Strength</h3>
+            <time>Monday 10:00AM, 22th March</time>
+          </a>
+          <a href="https://google.com" class="class">
+            <h3>Cardio Strength</h3>
+            <time>Monday 10:00AM, 22th March</time>
+          </a>
+          <a href="https://google.com" class="class">
+            <h3>Cardio Strength</h3>
+            <time>Monday 10:00AM, 22th March</time>
+          </a>
+          <a href="https://google.com" class="class">
+            <h3>Cardio Strength</h3>
+            <time>Monday 10:00AM, 22th March</time>
+          </a>
+          <a href="https://google.com" class="class">
+            <h3>Cardio Strength</h3>
+            <time>Monday 10:00AM, 22th March</time>
+          </a>
+          <a href="https://google.com" class="class">
+            <h3>Cardio Strength</h3>
+            <time>Monday 10:00AM, 22th March</time>
+          </a>
+          <a href="https://google.com" class="class">
+            <h3>Cardio Strength</h3>
+            <time>Monday 10:00AM, 22th March</time>
+          </a>
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
