--- a/index.html
+++ b/index.html
@@ -195,6 +195,34 @@
       </div>
     </section>
 
+    <section class="facilities">
+      <div class="columns">
+        <img src="facilities.jpg" alt="man training at the gym" />
+        <div class="content">
+          <div class="shadow-text">Facilities</div>
+          <h2>It's About Who You Can Become</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque
+            ea expedita facere fugiat harum impedit laboriosam laborum provident
+            quasi quos ratione, repellendus suscipit totam veritatis vero vitae!
+            Fugiat, voluptatum.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Consequuntur cumque, cupiditate enim esse est ex id iusto laudantium
+            maiores molestias, nisi perspiciatis possimus quisquam reprehenderit
+            soluta temporibus totam vero, voluptas.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus
+            adipisci aliquam at beatae consequuntur doloremque earum eius est in
+            iste, libero, molestias odio, provident repudiandae sapiente tempore
+            unde voluptatem. Neque?
+          </p>
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
