--- a/index.html
+++ b/index.html
@@ -223,6 +223,30 @@
       </div>
     </section>
 
+    <section class="team">
+      <div class="center">
+        <h2>Having You Own Coach And Mentor</h2>
+        <div class="shadow-text">Best team</div>
+        <div class="teams-members">
+          <div class="member">
+            <img src="body-builder.jpg" alt="" />
+            <h3>Richard Lili</h3>
+            <p>Weightlifting Expert</p>
+          </div>
+          <div class="member">
+            <img src="running.jpg" alt="" />
+            <h3>Richard Lili</h3>
+            <p>Running Expert</p>
+          </div>
+          <div class="member">
+            <img src="yoga.jpg" alt="" />
+            <h3>Richard Lili</h3>
+            <p>Yoga Expert</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
