--- a/index.html
+++ b/index.html
@@ -247,6 +247,23 @@
       </div>
     </section>
 
+    <section class="trainer">
+      <div class="columns">
+        <div>
+          <div class="square"></div>
+          <div class="content">
+            <div>
+              <div class="center">
+                <h2>The best<br />trainers<br />out there</h2>
+                <p>Are you a trainer? <a href="">Join us</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <img src="body-builder.jpg" alt="" />
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
