footer intial commit

--- a/index.html
+++ b/index.html
@@ -264,6 +264,17 @@
       </div>
     </section>
 
+    <footer>
+      <div class="columns center">
+          <div>
+              <a href="" class="logo">Dawid
+                  <span>gym</span></a>
+              <p>1-800 324 345</p>
+              <p>Kungsgatan 12, 192-12 Stockholm</p>
+              <p>hello@dawidsgym.com</p>
+          </div>
+          <div>
+
     <script src="script.js"></script>
   </body>
 </html>
