footer final commit

--- a/index.html
+++ b/index.html
@@ -266,14 +266,36 @@
 
     <footer>
       <div class="columns center">
-          <div>
-              <a href="" class="logo">Dawid
-                  <span>gym</span></a>
-              <p>1-800 324 345</p>
-              <p>Kungsgatan 12, 192-12 Stockholm</p>
-              <p>hello@dawidsgym.com</p>
+        <div>
+          <a href="" class="logo">Dawid <span>gym</span></a>
+          <p>1-800 324 345</p>
+          <p>Kungsgatan 12, 192-12 Stockholm</p>
+          <p>hello@dawidsgym.com</p>
+        </div>
+        <div>
+          <h4>Quick Links</h4>
+          <div class="links">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Test 1</a>
+            <a href="">Classes</a>
+            <a href="">Test 1</a>
+            <a href="">Test 1</a>
+            <a href="">Our gyms</a>
+            <a href="">Shop</a>
+            <a href="">Test 1</a>
+            <a href="">Contact</a>
           </div>
-          <div>
+        </div>
+        <div>
+          <h4>Gym Hours</h4>
+          <p>Monday 5am-10pm</p>
+          <p>Tuesday-Friday 5am-10pm</p>
+          <p>Saturday 5am-10pm</p>
+          <p>Sunday 5am-10pm</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
